--- a/productos.html
+++ b/productos.html
@@ -25,53 +25,36 @@
       </nav>
     </header>
 
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./Imagenes/1.jpg" class="d-block w-100 h-20" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="./Imagenes/9.jpg" class="d-block w-100 h-20" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="./Imagenes/7.jpg" class="d-block w-100 h-20" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+   
 
 
 
     <div class="main-p">
       <div class="producto">
+        <img class="image_prod" src="./Imagenes/8.jpg" alt="Sweetie set">
         <h1>Sweetie Set</h1>
         <div id="descripcion1">
             <p>Conjunto de bustier con varillas y pantie corte clásico, elaborado con una mezcla de materiales (lycra, mesh y encaje) en color durazno. En la parte trasera del bustier cuenta con tirantes ajustables para mayor comodidad. Perfecto para usar debajo de la ropa o como top con algún blazer como complemento.</p> 
         </div>
-<button onclick='muestra_oculto(descripcion1)' class="btn btn-primary" form="descripcion1">+ Detalles</button>
+<button onclick='muestra_oculto("descripcion1")' class="btn btn-primary" form="descripcion1">+ Detalles</button>
       </div>
 
       <div class="producto">
+        <img class="image_prod" src="./Imagenes/12.jpg" alt="Sweetie set">
         <h1>Cherry Set</h1>
         <div id="descripcion2">
             <p>Conjunto de bralette y pantie corte high waist/high leg, elaborado con materiales sumamente suaves y amigables con la piel (algodón y encaje). Este set es la combinación perfecta entre comodidad y sensualidad. Incluye ligas para las piernas de regalo en su compra. </p> 
         </div>
-        <button onclick='muestra_oculto(descripcion2)' class="btn btn-primary" form="descripcion2">+ Detalles</button>
+        <button onclick='muestra_oculto("descripcion2")' class="btn btn-primary" form="descripcion2">+ Detalles</button>
       </div>
 
       <div class="producto">
+        <img class="image_prod" src="./Imagenes/3.jpg" alt="Sweetie set">
         <h1>Amira Set</h1>
         <div id="descripcion3">
             <p>Conjunto de bralette y pantie corte clásico , elaborado con lycra satinada de color vino y encaje color negro. El bralette cuenta con un soporte tipo bra deportivo para mayor soporte y con broche trasero para mayor comodidad. </p>
         </div>
-        <button onclick='muestra_oculto(descripcion3)' class="btn btn-primary" form="descripcion3">+ Detalles</button>
+        <button onclick='muestra_oculto("descripcion3")' class="btn btn-primary" form="descripcion3">+ Detalles</button>
       </div>
       
     </div>
